feat(api): trigger by register number
